[package]
name = "oura-dump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oura = "1.8.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.89", features = ["arbitrary_precision"] }
clap = "3.2.22"
env_logger = "0.10.0"
log = "0.4.17"
